# quadrotor_dynamics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: quadrotor.yaml
include/flightlib/common/: command.hpp  types.hpp
include/flightlib/dynamics/: quadrotor_dynamics.hpp
include/flightlib/objects/: quadrotor.hpp
src/common/: command.cpp  logger.cpp
src/dynamics/: quadrotor_dynamics.cpp
src/objects/: quadrotor.cpp
tests/dynamics/: quadrotor_dynamics.cpp
tests/objects/: quadrotor.cpp
